# Amnezichat_Server

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: index.html
