[package]
name = "Amnezichat_Server"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
html-escape = "0.2"
rand = "0.8"
zeroize = "1.5"
regex = "1.7"
hex = "0.4"
